--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -117,7 +117,58 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CameraTrackingFailed" xml:space="preserve">
+    <value>Kinect Fusion camera tracking failed. Align the camera to the last tracked position.</value>
+  </data>
+  <data name="ErrorSaveMesh" xml:space="preserve">
+    <value>Error saving Kinect Fusion mesh!</value>
+  </data>
+  <data name="Fps" xml:space="preserve">
+    <value>Fps: {0:0.00}</value>
+  </data>
+  <data name="IntroductoryMessage" xml:space="preserve">
+    <value>Click "Near Mode" to change sensor range, and "Reset Reconstruction" to clear</value>
+  </data>
+  <data name="InvalidMeshArgument" xml:space="preserve">
+    <value>Invalid mesh arguments. Saving mesh process aborted</value>
+  </data>
+  <data name="MeshNullVolume" xml:space="preserve">
+    <value>Cannot create mesh of non-existent reconstruction</value>
+  </data>
+  <data name="MeshSaveCanceled" xml:space="preserve">
+    <value>Mesh save canceled</value>
+  </data>
+  <data name="MeshSaved" xml:space="preserve">
+    <value>Saved Kinect Fusion mesh</value>
+  </data>
+  <data name="MissingPrerequisite" xml:space="preserve">
+    <value>A prerequisite component for Kinect Fusion is missing. Please refer to the Toolkit documentation for assistance</value>
+  </data>
+  <data name="NearModeNotSupported" xml:space="preserve">
+    <value>Near mode is not supported by device</value>
+  </data>
   <data name="NoKinectReady" xml:space="preserve">
     <value>No ready Kinect found!</value>
+  </data>
+  <data name="NoReadyKinect" xml:space="preserve">
+    <value>No ready Kinect found!</value>
+  </data>
+  <data name="OutOfMemory" xml:space="preserve">
+    <value>Out of memory error initializing reconstruction - try a smaller reconstruction volume</value>
+  </data>
+  <data name="ResetFailed" xml:space="preserve">
+    <value>Kinect Fusion reset reconstruction call failed</value>
+  </data>
+  <data name="ResetVolume" xml:space="preserve">
+    <value>Reconstruction has been reset</value>
+  </data>
+  <data name="ResetVolumeAuto" xml:space="preserve">
+    <value>Kinect Fusion camera tracking failed, automatically reset volume</value>
+  </data>
+  <data name="SavingMesh" xml:space="preserve">
+    <value>Creating and saving mesh of reconstruction, please wait...</value>
+  </data>
+  <data name="VolumeResolution" xml:space="preserve">
+    <value>Volume resolution should be greater than 0 and multiple of 32</value>
   </data>
 </root>
